Fixed bug #76136 (stream_socket_get_name enclosed IPv6 in brackets)

The IPv6 IP of a socket is provided by inet_ntop() as a string, but
this function doesn't enclose the IP in brackets. This patch adds
them in the php_network_populate_name_from_sockaddr() function.